src/main/java/com/example/project_v2/_core/errors/exception/ApiException404.java
package com.example.project_v2._core.errors.exception;

public class ApiException404 extends RuntimeException {
    public ApiException404(String msg){
        super(msg);
    }
}
